Popup modal - fixed visibility and close issue

--- a/src/main/webapp/public/n/themes/deals/css/hc.css
+++ b/src/main/webapp/public/n/themes/deals/css/hc.css
@@ -558,11 +558,19 @@ select {
 		.select-dates-button {
 			width:100%;
 		}
+		.modal-box {
+			width:60% !important;
+		}
 	}
 /* Modal - Message pop up */
 .modal-wrapper {
+	display: none;
 	float:left;
 	width:590px;
+}
+.cancel-action{
+	float:right;
+	cursor:pointer;
 }
 .modal-box {
     float: left;
